@@ -1,4 +1,5 @@
 27 Oct, 2018
+update: pagination to log_viewer.php
 update: viewtickets.php
 fix: flash message using html instead of bbcode tickets.php
 fix: autobahn recording stats
